# learn_to_type

./: README.md
Backend/: CMakeLists.txt  GenerateProjectFilesDevelopment.bat  GenerateProjectFilesRelease.sh
Backend/AuthService/: server.py
Backend/Server/: Util.cpp  Util.h  main.cpp
Backend/Server/controllers/: Auth.cpp  Auth.h  Fuzzy.cpp  Fuzzy.h  Home.cpp  Home.h  Typing.cpp  Typing.h
Backend/Server/views/: home.cc  home.csp  typing.cc  typing.csp  typing.h
Backend/ViewTool/: CMakeLists.txt
Backend/ViewTool/Source/: main.cpp
frontend/: .gitignore  index.html
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Login.tsx  ModalContent.tsx  Restart.tsx  TimeCategory.tsx  WordWrapper.tsx
frontend/src/hooks/: useCountdown.ts  useModal.ts  useSystem.ts  useWord.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
fuzzy_np/: .env  app.py  fuzzy_and_gtp.app.py  fuzzy_app.py  fuzzy_system.py  gtp_app.py  input_sample.json  requirements.txt  utils.py
